--- a/portfolio.html
+++ b/portfolio.html
@@ -29,28 +29,36 @@ nav ul {
     }
  nav li {
         display: aline-block;
-        padding: 10px 10px;
+        padding: 5px 5px;
 }
 main{
     background: darkorange;
-    color: #fff
+    color: #fff;
 
 }
 
 div li{ display: inline-block;
-        margin:3px;
-        padding: 5px;
-        float: left;
-        border: 2px solid #ffffff;
-       
-}
+padding;
+        margin:5px;
+        padding-left: 30px;
+        float: inherite;
+        position: relative;
+   }
+
 p{
     font-size: 1.1em;
     border: 1px dotted #fff;
 }
-.row{
-    
+
+.videos{
+     background-color: #ffbf80;
+    padding-top: 50px;
 }
+
+.row{
+
+}
+
 .projects{
     display: aline-block;
 }
